2006-02-18  Derek Atkins  <derek@ihtfp.com>

	* intl-scm/xgettext.scm: remove the absolute path from filenames
	* intl-scm/Makefile.am: pass the absolute path to xgettext.scm

2006-02-17  David Hampton  <hampton@employees.org>

	* src/register/register-gnome/gnucash-sheet.c:
	* src/register/register-gnome/gnucash-item-edit.[ch]: Remove all
	explicit claiming of the selection in these files.  The GtkEntry
	they use already performs claims, and the additional just mess
	things up.  Fixes #330153.

	* src/register/register-gnome/gnucash-item-list.c:
	* src/report/report-gnome/dialog-style-sheet.c:
	* src/gnome-utils/gnc-tree-model-commodity.c:
	* src/gnome-utils/gnc-tree-model-budget.[ch]:
	* src/gnome-utils/gnc-tree-model-account.c:
	* src/gnome-utils/gnc-tree-model-price.c:
	* src/gnome-utils/gnc-tree-view-account.c:
	* src/gnome-utils/dialog-options.c:
	* lib/goffice-0.0.4/goffice/graph/gog-guru.c:
	* lib/goffice-0.0.4/goffice/gtk/go-format-sel.c: Prepare for gtk
	change that will issue warnings if the return value of the
	gtk_tree_model iter functions are not used.

2006-02-17  Derek Atkins <derek@ihtfp.com>

        * intl-scm/Makefile.am:
        * lib/guile-www/Makefile.am:
        * src/app-utils/Makefile.am:
	* src/business/business-core/Makefile.am:
        * src/business/business-gnome/Makefile.am:
        * src/business/business-reports/Makefile.am:
        * src/business/business-utils/Makefile.am:
        * src/business/dialog-tax-table/Makefile.am:
	* src/core-utils/Makefile.am:
        * src/engine/Makefile.am:
	* src/gnc-module/Makefile.am:
	* src/gnome/Makefile.am:
        * src/gnome-utils/Makefile.am:
	* src/import-export/hbci/Makefile.am:
        * src/import-export/Makefile.am:
        * src/import-export/qif-import/Makefile.am:
        * src/import-export/qif-io-core/Makefile.am:
	* src/register/register-core/Makefile.am:
	* src/report/locale-specific/us/Makefile.am:
        * src/report/report-gnome/Makefile.am: